# ai-docs-scrapper

./: .gitignore  AI_AGENT_GUIDE.md  CLAUDE.md  LICENSE  PROMPT_INJECTION.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
examples/: targets.txt
skills/ai-docs-scraper/: SKILL.md
src/ai_docs_scraper/: __init__.py  cli.py
tests/: test_cli.py
