[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-docs-scraper"
version = "0.1.0"
description = "A tiny docs-to-Markdown scraper for AI context."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Edwin Martin" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "defusedxml>=0.7.1",
  "markdownify>=0.12.0",
  "requests>=2.31.0",
]

[project.scripts]
ai-docs-scraper = "ai_docs_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
